Project KAME/y.output
Terminais sem uso na gramática

    COMMENT


Gramática

    0 $accept: prog $end

    1 prog: declaration_seq subprograms main_seq

    2 declaration_seq: declaration ';' declaration_seq
    3                | ε

    4 declaration: VAR id_list ':' TYPE
    5            | user_def
    6            | type_def

    7 id_list: ID
    8        | ID array_dim
    9        | ID ',' id_list
   10        | ID array_dim ',' id_list

   11 initialization: VAR id_list ':' TYPE ASSIGN exp

   12 subprograms: subprogram ';' subprograms
   13            | ε

   14 subprogram: function
   15           | proc

   16 function: FUNCTION ID '(' paramsdef ')' ':' TYPE BEGIN_BLOCK commands END_BLOCK

   17 proc: PROC ID '(' paramsdef ')' BEGIN_BLOCK commands END_BLOCK

   18 paramsdef: var ':' TYPE
   19          | var ':' TYPE ',' paramsdef
   20          | ε

   21 params: exp
   22       | exp ',' params
   23       | ε

   24 func_proc_call: ID '(' params ')'

   25 commands: command ';' commands
   26         | ε

   27 command: declaration
   28        | assign
   29        | initialization
   30        | control_block
   31        | loop_block
   32        | func_proc_call
   33        | BREAK
   34        | RETURN
   35        | RETURN exp
   36        | CONTINUE
   37        | INPUT '(' ')'
   38        | OUTPUT '(' exp ')'

   39 user_def: STRUCT ID BEGIN_BLOCK declaration_seq END_BLOCK
   40         | ENUM ID BEGIN_BLOCK enum_init END_BLOCK

   41 enum_init: ID
   42          | ID ',' enum_init
   43          | ID id_list ASSIGN NUMBER
   44          | ID id_list ASSIGN NUMBER ',' enum_init

   45 type_def: TYPEDEF ID ASSIGN user_def

   46 assign: OPC ID
   47       | ID OPC
   48       | var ASSIGN exp
   49       | var OPA exp

   50 control_block: IF '(' exp ')' BEGIN_BLOCK commands END_BLOCK
   51              | IF '(' exp ')' BEGIN_BLOCK commands END_BLOCK ELSE BEGIN_BLOCK commands END_BLOCK
   52              | WHILE '(' exp ')' BEGIN_BLOCK commands END_BLOCK

   53 loop_block: FOR '(' initialization ';' exp ';' assign ')' BEGIN_BLOCK commands END_BLOCK
   54           | FOR '(' assign ';' exp ';' assign ')' BEGIN_BLOCK commands END_BLOCK

   55 exp: term
   56    | exp WEAK_OP term

   57 term: factor
   58     | term STRONG_OP factor

   59 factor: var
   60       | STR_LITERAL
   61       | NUMBER
   62       | REAL
   63       | func_proc_call
   64       | '(' exp ')'
   65       | WEAK_OP factor
   66       | TRUE
   67       | FALSE
   68       | NOT factor
   69       | LENGTH '(' factor ')'

   70 var: ID
   71    | ID array_dim
   72    | ID '.' var

   73 array_dim: '[' ']'
   74          | '[' ']' array_dim
   75          | '[' exp ']'
   76          | '[' exp ']' array_dim

   77 main_seq: MAIN_BLOCK '(' ')' BEGIN_BLOCK commands END_BLOCK ';'
   78         | ε


Terminais, com as regras onde eles aparecem

    $end (0) 0
    '(' (40) 16 17 24 37 38 50 51 52 53 54 64 69 77
    ')' (41) 16 17 24 37 38 50 51 52 53 54 64 69 77
    ',' (44) 9 10 19 22 42 44
    '.' (46) 72
    ':' (58) 4 11 16 18 19
    ';' (59) 2 12 25 53 54 77
    '[' (91) 73 74 75 76
    ']' (93) 73 74 75 76
    error (256)
    ID <sValue> (258) 7 8 9 10 16 17 24 39 40 41 42 43 44 45 46 47 70 71 72
    TYPE <sValue> (259) 4 11 16 18 19
    NUMBER <iValue> (260) 43 44 61
    REAL <fValue> (261) 62
    STR_LITERAL <sValue> (262) 60
    OPA <sValue> (263) 49
    OPC <sValue> (264) 46 47
    WEAK_OP <sValue> (265) 56 65
    STRONG_OP <sValue> (266) 58
    COMMENT <sValue> (267)
    ENUM (268) 40
    STRUCT (269) 39
    VAR (270) 4 11
    BREAK (271) 33
    RETURN (272) 34 35
    CONTINUE (273) 36
    INPUT (274) 37
    OUTPUT (275) 38
    FUNCTION (276) 16
    PROC (277) 17
    WHILE (278) 52
    FOR (279) 53 54
    TYPEDEF (280) 45
    TRUE (281) 66
    FALSE (282) 67
    BEGIN_BLOCK (283) 16 17 39 40 50 51 52 53 54 77
    END_BLOCK (284) 16 17 39 40 50 51 52 53 54 77
    IF (285) 50 51
    ELSE (286) 51
    ASSIGN (287) 11 43 44 45 48
    MAIN_BLOCK (288) 77
    NOT (289) 68
    LENGTH (290) 69


Não terminais com as regras onde eles aparecem

    $accept (44)
        à esquerda: 0
    prog (45)
        à esquerda: 1
        à direita: 0
    declaration_seq <rec> (46)
        à esquerda: 2 3
        à direita: 1 2 39
    declaration (47)
        à esquerda: 4 5 6
        à direita: 2 27
    id_list <rec> (48)
        à esquerda: 7 8 9 10
        à direita: 4 9 10 11 43 44
    initialization (49)
        à esquerda: 11
        à direita: 29 53
    subprograms <rec> (50)
        à esquerda: 12 13
        à direita: 1 12
    subprogram (51)
        à esquerda: 14 15
        à direita: 12
    function (52)
        à esquerda: 16
        à direita: 14
    proc (53)
        à esquerda: 17
        à direita: 15
    paramsdef (54)
        à esquerda: 18 19 20
        à direita: 16 17 19
    params (55)
        à esquerda: 21 22 23
        à direita: 22 24
    func_proc_call (56)
        à esquerda: 24
        à direita: 32 63
    commands <rec> (57)
        à esquerda: 25 26
        à direita: 16 17 25 50 51 52 53 54 77
    command <rec> (58)
        à esquerda: 27 28 29 30 31 32 33 34 35 36 37 38
        à direita: 25
    user_def (59)
        à esquerda: 39 40
        à direita: 5 45
    enum_init (60)
        à esquerda: 41 42 43 44
        à direita: 40 42 44
    type_def (61)
        à esquerda: 45
        à direita: 6
    assign (62)
        à esquerda: 46 47 48 49
        à direita: 28 53 54
    control_block (63)
        à esquerda: 50 51 52
        à direita: 30
    loop_block (64)
        à esquerda: 53 54
        à direita: 31
    exp (65)
        à esquerda: 55 56
        à direita: 11 21 22 35 38 48 49 50 51 52 53 54 56 64 75 76
    term (66)
        à esquerda: 57 58
        à direita: 55 56 58
    factor (67)
        à esquerda: 59 60 61 62 63 64 65 66 67 68 69
        à direita: 57 58 65 68 69
    var (68)
        à esquerda: 70 71 72
        à direita: 18 19 48 49 59 72
    array_dim (69)
        à esquerda: 73 74 75 76
        à direita: 8 10 71 74 76
    main_seq <rec> (70)
        à esquerda: 77 78
        à direita: 1


Estado 0

    0 $accept: • prog $end

    ENUM     deslocar, e ir ao estado 1
    STRUCT   deslocar, e ir ao estado 2
    VAR      deslocar, e ir ao estado 3
    TYPEDEF  deslocar, e ir ao estado 4

    $padrão  reduzir usando a regra 3 (declaration_seq)

    prog             ir ao estado 5
    declaration_seq  ir ao estado 6
    declaration      ir ao estado 7
    user_def         ir ao estado 8
    type_def         ir ao estado 9


Estado 1

   40 user_def: ENUM • ID BEGIN_BLOCK enum_init END_BLOCK

    ID  deslocar, e ir ao estado 10


Estado 2

   39 user_def: STRUCT • ID BEGIN_BLOCK declaration_seq END_BLOCK

    ID  deslocar, e ir ao estado 11


Estado 3

    4 declaration: VAR • id_list ':' TYPE

    ID  deslocar, e ir ao estado 12

    id_list  ir ao estado 13


Estado 4

   45 type_def: TYPEDEF • ID ASSIGN user_def

    ID  deslocar, e ir ao estado 14


Estado 5

    0 $accept: prog • $end

    $end  deslocar, e ir ao estado 15


Estado 6

    1 prog: declaration_seq • subprograms main_seq

    FUNCTION  deslocar, e ir ao estado 16
    PROC      deslocar, e ir ao estado 17

    $padrão  reduzir usando a regra 13 (subprograms)

    subprograms  ir ao estado 18
    subprogram   ir ao estado 19
    function     ir ao estado 20
    proc         ir ao estado 21


Estado 7

    2 declaration_seq: declaration • ';' declaration_seq

    ';'  deslocar, e ir ao estado 22


Estado 8

    5 declaration: user_def •

    $padrão  reduzir usando a regra 5 (declaration)


Estado 9

    6 declaration: type_def •

    $padrão  reduzir usando a regra 6 (declaration)


Estado 10

   40 user_def: ENUM ID • BEGIN_BLOCK enum_init END_BLOCK

    BEGIN_BLOCK  deslocar, e ir ao estado 23


Estado 11

   39 user_def: STRUCT ID • BEGIN_BLOCK declaration_seq END_BLOCK

    BEGIN_BLOCK  deslocar, e ir ao estado 24


Estado 12

    7 id_list: ID •
    8        | ID • array_dim
    9        | ID • ',' id_list
   10        | ID • array_dim ',' id_list

    ','  deslocar, e ir ao estado 25
    '['  deslocar, e ir ao estado 26

    $padrão  reduzir usando a regra 7 (id_list)

    array_dim  ir ao estado 27


Estado 13

    4 declaration: VAR id_list • ':' TYPE

    ':'  deslocar, e ir ao estado 28


Estado 14

   45 type_def: TYPEDEF ID • ASSIGN user_def

    ASSIGN  deslocar, e ir ao estado 29


Estado 15

    0 $accept: prog $end •

    $padrão  aceitar


Estado 16

   16 function: FUNCTION • ID '(' paramsdef ')' ':' TYPE BEGIN_BLOCK commands END_BLOCK

    ID  deslocar, e ir ao estado 30


Estado 17

   17 proc: PROC • ID '(' paramsdef ')' BEGIN_BLOCK commands END_BLOCK

    ID  deslocar, e ir ao estado 31


Estado 18

    1 prog: declaration_seq subprograms • main_seq

    MAIN_BLOCK  deslocar, e ir ao estado 32

    $padrão  reduzir usando a regra 78 (main_seq)

    main_seq  ir ao estado 33


Estado 19

   12 subprograms: subprogram • ';' subprograms

    ';'  deslocar, e ir ao estado 34


Estado 20

   14 subprogram: function •

    $padrão  reduzir usando a regra 14 (subprogram)


Estado 21

   15 subprogram: proc •

    $padrão  reduzir usando a regra 15 (subprogram)


Estado 22

    2 declaration_seq: declaration ';' • declaration_seq

    ENUM     deslocar, e ir ao estado 1
    STRUCT   deslocar, e ir ao estado 2
    VAR      deslocar, e ir ao estado 3
    TYPEDEF  deslocar, e ir ao estado 4

    $padrão  reduzir usando a regra 3 (declaration_seq)

    declaration_seq  ir ao estado 35
    declaration      ir ao estado 7
    user_def         ir ao estado 8
    type_def         ir ao estado 9


Estado 23

   40 user_def: ENUM ID BEGIN_BLOCK • enum_init END_BLOCK

    ID  deslocar, e ir ao estado 36

    enum_init  ir ao estado 37


Estado 24

   39 user_def: STRUCT ID BEGIN_BLOCK • declaration_seq END_BLOCK

    ENUM     deslocar, e ir ao estado 1
    STRUCT   deslocar, e ir ao estado 2
    VAR      deslocar, e ir ao estado 3
    TYPEDEF  deslocar, e ir ao estado 4

    $padrão  reduzir usando a regra 3 (declaration_seq)

    declaration_seq  ir ao estado 38
    declaration      ir ao estado 7
    user_def         ir ao estado 8
    type_def         ir ao estado 9


Estado 25

    9 id_list: ID ',' • id_list

    ID  deslocar, e ir ao estado 12

    id_list  ir ao estado 39


Estado 26

   73 array_dim: '[' • ']'
   74          | '[' • ']' array_dim
   75          | '[' • exp ']'
   76          | '[' • exp ']' array_dim

    ID           deslocar, e ir ao estado 40
    NUMBER       deslocar, e ir ao estado 41
    REAL         deslocar, e ir ao estado 42
    STR_LITERAL  deslocar, e ir ao estado 43
    WEAK_OP      deslocar, e ir ao estado 44
    TRUE         deslocar, e ir ao estado 45
    FALSE        deslocar, e ir ao estado 46
    NOT          deslocar, e ir ao estado 47
    LENGTH       deslocar, e ir ao estado 48
    '('          deslocar, e ir ao estado 49
    ']'          deslocar, e ir ao estado 50

    func_proc_call  ir ao estado 51
    exp             ir ao estado 52
    term            ir ao estado 53
    factor          ir ao estado 54
    var             ir ao estado 55


Estado 27

    8 id_list: ID array_dim •
   10        | ID array_dim • ',' id_list

    ','  deslocar, e ir ao estado 56

    $padrão  reduzir usando a regra 8 (id_list)


Estado 28

    4 declaration: VAR id_list ':' • TYPE

    TYPE  deslocar, e ir ao estado 57


Estado 29

   45 type_def: TYPEDEF ID ASSIGN • user_def

    ENUM    deslocar, e ir ao estado 1
    STRUCT  deslocar, e ir ao estado 2

    user_def  ir ao estado 58


Estado 30

   16 function: FUNCTION ID • '(' paramsdef ')' ':' TYPE BEGIN_BLOCK commands END_BLOCK

    '('  deslocar, e ir ao estado 59


Estado 31

   17 proc: PROC ID • '(' paramsdef ')' BEGIN_BLOCK commands END_BLOCK

    '('  deslocar, e ir ao estado 60


Estado 32

   77 main_seq: MAIN_BLOCK • '(' ')' BEGIN_BLOCK commands END_BLOCK ';'

    '('  deslocar, e ir ao estado 61


Estado 33

    1 prog: declaration_seq subprograms main_seq •

    $padrão  reduzir usando a regra 1 (prog)


Estado 34

   12 subprograms: subprogram ';' • subprograms

    FUNCTION  deslocar, e ir ao estado 16
    PROC      deslocar, e ir ao estado 17

    $padrão  reduzir usando a regra 13 (subprograms)

    subprograms  ir ao estado 62
    subprogram   ir ao estado 19
    function     ir ao estado 20
    proc         ir ao estado 21


Estado 35

    2 declaration_seq: declaration ';' declaration_seq •

    $padrão  reduzir usando a regra 2 (declaration_seq)


Estado 36

   41 enum_init: ID •
   42          | ID • ',' enum_init
   43          | ID • id_list ASSIGN NUMBER
   44          | ID • id_list ASSIGN NUMBER ',' enum_init

    ID   deslocar, e ir ao estado 12
    ','  deslocar, e ir ao estado 63

    $padrão  reduzir usando a regra 41 (enum_init)

    id_list  ir ao estado 64


Estado 37

   40 user_def: ENUM ID BEGIN_BLOCK enum_init • END_BLOCK

    END_BLOCK  deslocar, e ir ao estado 65


Estado 38

   39 user_def: STRUCT ID BEGIN_BLOCK declaration_seq • END_BLOCK

    END_BLOCK  deslocar, e ir ao estado 66


Estado 39

    9 id_list: ID ',' id_list •

    $padrão  reduzir usando a regra 9 (id_list)


Estado 40

   24 func_proc_call: ID • '(' params ')'
   70 var: ID •
   71    | ID • array_dim
   72    | ID • '.' var

    '('  deslocar, e ir ao estado 67
    '.'  deslocar, e ir ao estado 68
    '['  deslocar, e ir ao estado 26

    $padrão  reduzir usando a regra 70 (var)

    array_dim  ir ao estado 69


Estado 41

   61 factor: NUMBER •

    $padrão  reduzir usando a regra 61 (factor)


Estado 42

   62 factor: REAL •

    $padrão  reduzir usando a regra 62 (factor)


Estado 43

   60 factor: STR_LITERAL •

    $padrão  reduzir usando a regra 60 (factor)


Estado 44

   65 factor: WEAK_OP • factor

    ID           deslocar, e ir ao estado 40
    NUMBER       deslocar, e ir ao estado 41
    REAL         deslocar, e ir ao estado 42
    STR_LITERAL  deslocar, e ir ao estado 43
    WEAK_OP      deslocar, e ir ao estado 44
    TRUE         deslocar, e ir ao estado 45
    FALSE        deslocar, e ir ao estado 46
    NOT          deslocar, e ir ao estado 47
    LENGTH       deslocar, e ir ao estado 48
    '('          deslocar, e ir ao estado 49

    func_proc_call  ir ao estado 51
    factor          ir ao estado 70
    var             ir ao estado 55


Estado 45

   66 factor: TRUE •

    $padrão  reduzir usando a regra 66 (factor)


Estado 46

   67 factor: FALSE •

    $padrão  reduzir usando a regra 67 (factor)


Estado 47

   68 factor: NOT • factor

    ID           deslocar, e ir ao estado 40
    NUMBER       deslocar, e ir ao estado 41
    REAL         deslocar, e ir ao estado 42
    STR_LITERAL  deslocar, e ir ao estado 43
    WEAK_OP      deslocar, e ir ao estado 44
    TRUE         deslocar, e ir ao estado 45
    FALSE        deslocar, e ir ao estado 46
    NOT          deslocar, e ir ao estado 47
    LENGTH       deslocar, e ir ao estado 48
    '('          deslocar, e ir ao estado 49

    func_proc_call  ir ao estado 51
    factor          ir ao estado 71
    var             ir ao estado 55


Estado 48

   69 factor: LENGTH • '(' factor ')'

    '('  deslocar, e ir ao estado 72


Estado 49

   64 factor: '(' • exp ')'

    ID           deslocar, e ir ao estado 40
    NUMBER       deslocar, e ir ao estado 41
    REAL         deslocar, e ir ao estado 42
    STR_LITERAL  deslocar, e ir ao estado 43
    WEAK_OP      deslocar, e ir ao estado 44
    TRUE         deslocar, e ir ao estado 45
    FALSE        deslocar, e ir ao estado 46
    NOT          deslocar, e ir ao estado 47
    LENGTH       deslocar, e ir ao estado 48
    '('          deslocar, e ir ao estado 49

    func_proc_call  ir ao estado 51
    exp             ir ao estado 73
    term            ir ao estado 53
    factor          ir ao estado 54
    var             ir ao estado 55


Estado 50

   73 array_dim: '[' ']' •
   74          | '[' ']' • array_dim

    '['  deslocar, e ir ao estado 26

    $padrão  reduzir usando a regra 73 (array_dim)

    array_dim  ir ao estado 74


Estado 51

   63 factor: func_proc_call •

    $padrão  reduzir usando a regra 63 (factor)


Estado 52

   56 exp: exp • WEAK_OP term
   75 array_dim: '[' exp • ']'
   76          | '[' exp • ']' array_dim

    WEAK_OP  deslocar, e ir ao estado 75
    ']'      deslocar, e ir ao estado 76


Estado 53

   55 exp: term •
   58 term: term • STRONG_OP factor

    STRONG_OP  deslocar, e ir ao estado 77

    $padrão  reduzir usando a regra 55 (exp)


Estado 54

   57 term: factor •

    $padrão  reduzir usando a regra 57 (term)


Estado 55

   59 factor: var •

    $padrão  reduzir usando a regra 59 (factor)


Estado 56

   10 id_list: ID array_dim ',' • id_list

    ID  deslocar, e ir ao estado 12

    id_list  ir ao estado 78


Estado 57

    4 declaration: VAR id_list ':' TYPE •

    $padrão  reduzir usando a regra 4 (declaration)


Estado 58

   45 type_def: TYPEDEF ID ASSIGN user_def •

    $padrão  reduzir usando a regra 45 (type_def)


Estado 59
